runs/github.com/l/lisaleemcb/sncosmo_lc_analysis/logs/test-notebook-poster.ipynb-2020-07-15T13.01.txt
[I 200715 13:02:47 inrepo:36] Testing notebook poster.ipynb
[I 200715 13:02:48 execute:404] Executing notebook with kernel: python
Traceback (most recent call last):
  File "/src/inrepo.py", line 114, in <module>
    main()
  File "/src/inrepo.py", line 110, in main
    test_f(opts.test, opts.output_dir)
  File "/src/inrepo.py", line 75, in run_notebook
    nb, cwd=os.path.dirname(nb_path), kernel_name=kernel_name, timeout=600
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 737, in executenb
    return ep.preprocess(nb, resources, km=km)[0]
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 405, in preprocess
    nb, resources = super(ExecutePreprocessor, self).preprocess(nb, resources)
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/base.py", line 69, in preprocess
    nb.cells[index], resources = self.preprocess_cell(cell, resources, index)
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 448, in preprocess_cell
    raise CellExecutionError.from_cell_and_msg(cell, out)
nbconvert.preprocessors.execute.CellExecutionError: An error occurred while executing the following cell:
------------------
from plotly import __version__
from plotly.offline import download_plotlyjs, init_notebook_mode, iplot

print __version__ # requires version >= 1.9.0
------------------

[0;36m  File [0;32m"<ipython-input-1-b052e6c655ec>"[0;36m, line [0;32m4[0m
[0;31m    print __version__ # requires version >= 1.9.0[0m
[0m                    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m Missing parentheses in call to 'print'. Did you mean print(__version__ # requires version >= 1.9.0)?

SyntaxError: Missing parentheses in call to 'print'. Did you mean print(__version__ # requires version >= 1.9.0)? (<ipython-input-1-b052e6c655ec>, line 4)


Container exited with status: {'Error': None, 'StatusCode': 1}
